--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
