--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.3.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.14"
   }
 }
